--- a/src/index.html
+++ b/src/index.html
@@ -153,7 +153,7 @@
 	<link rel="stylesheet" type="text/css" href="slick/slick-theme.css">
 	<script src="slick/slick.min.js"></script>
 	<script>
- $(document).ready function () {
+ $(document).ready (function () {
  $('.popup-btn').on('click', function (event){
  	event.preventDefault();
  	$('.popup').fadeIn()
@@ -187,7 +187,7 @@
     // settings: "unslick"
     // instead of a settings object
   ]
-});}
+});)}
 
 	</script>
 	</body>
