--- a/tab/tabs.html
+++ b/tab/tabs.html
@@ -14,13 +14,20 @@
 
 		<!-- Custom styles for this template -->
 		<link href="css/main.css" rel="stylesheet">
+		<link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
 	</head>
 
 	<body>
+
 		<div class="container">
 			<div class="row">
 			    <div class="col-md-8 offset-2">
+
 			    <h2>Ответы на вопросы</h2>
+
 				<h3>Которые нам задают чаще всего</h3>
 				<div id="accordion">
 				  <div class="card accordion">
@@ -100,7 +107,7 @@
 			<br>
 		</div>
 		 <div class="container-fluid">
-		 	<section class="tab-block">
+		 	<section class="tab-block animate__animated animate__slideInUp animate__delay-2s">
 		 	<div class="row">
 		 		<div class="col-md-12 offset-0 col-lg-6 offset-3">
 					<!-- Nav tabs -->
@@ -142,6 +149,10 @@
 		<!-- /.container -->
 		<!-- Bootstrap core JavaScript ================================================== -->
 		<!-- Placed at the end of the document so the pages load faster -->
+		<script src="https://raw.githubusercontent.com/graingert/WOW/master/dist/wow.min.js"></script>
+		<script>
+		new WOW().init();
+		</script>
 		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>	
