--- a/tab/tabs.html
+++ b/tab/tabs.html
@@ -14,10 +14,7 @@
 
 		<!-- Custom styles for this template -->
 		<link href="css/main.css" rel="stylesheet">
-		<link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
+		<link rel="stylesheet" href="css/animate.css" />
 	</head>
 
 	<body>
@@ -25,9 +22,7 @@
 		<div class="container">
 			<div class="row">
 			    <div class="col-md-8 offset-2">
-
 			    <h2>Ответы на вопросы</h2>
-
 				<h3>Которые нам задают чаще всего</h3>
 				<div id="accordion">
 				  <div class="card accordion">
@@ -107,7 +102,8 @@
 			<br>
 		</div>
 		 <div class="container-fluid">
-		 	<section class="tab-block animate__animated animate__slideInUp animate__delay-2s">
+
+		 	<section class="tab-block wow fadeInUp" data-wow-offset="200" data-wow-delay="0.5s" data-wow-duration="2s">
 		 	<div class="row">
 		 		<div class="col-md-12 offset-0 col-lg-6 offset-3">
 					<!-- Nav tabs -->
@@ -149,10 +145,10 @@
 		<!-- /.container -->
 		<!-- Bootstrap core JavaScript ================================================== -->
 		<!-- Placed at the end of the document so the pages load faster -->
-		<script src="https://raw.githubusercontent.com/graingert/WOW/master/dist/wow.min.js"></script>
-		<script>
-		new WOW().init();
-		</script>
+		<script src="js/wow.min.js"></script>
+ <script>
+    new WOW().init();
+  </script>
 		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>	
