--- a/kvest/index.html
+++ b/kvest/index.html
@@ -40,7 +40,7 @@
 		  		</div>
 		  		<div class="col-sm-12 col-md-6 col-lg-8">
 		  			<span class="viborg">
-		  				<a href="/"><img src="img/viborg.png" alt="" class="src"></a>
+		  				<a href="/"><img src="img/viborg.png" alt=""></a>
 		  			</span>
 		  		</div>
 		  		<div class="col-sm-12 col-md-3 col-lg-2">
@@ -67,27 +67,35 @@
 		  		</div>
 		  	</div>
 		  </div>
-		  <span class="img-about"><img src="img/about.png"></span>
 	  </main>
 
-	  <section class="about wow fadeInUp" data-wow-offset="200" data-wow-delay="0.5s" data-wow-duration="2s"">
-
-	  	<div class="container-fluid">
-    		<div class="row align-items-center">
+	  <section class="img-kvest">
+	  		<div class="container-fluid">
+	  		<div class="row align-items-center img-about">
 		        <div class="col-sm-12">
 		            <div class="row justify-content-center">
-		                <div class="col-12 text-center"> 
-		                <h2>Мы организуем и проводим</h2>
-			  			<p><img src="img/kvesti-about.png"></p>
-			  			<p>(их также называют квесты ориентирования) разной направленности</p>
+		                <div class="col-sm-12 col-md-4 text-center"> 
+			  				<span><img src="img/about.png"></span>
 		                </div>
 		            </div>
 		        </div>
-    		</div>
-		</div>
-	  	<div class="container">
-	  	<div class="row">
-	  		<div class="col-sm-12 col-md-6">
+	  		</div>
+	  		</div>
+	  </section>
+
+	  <section class="about wow fadeInUp" data-wow-offset="200" data-wow-delay="0.5s" data-wow-duration="2s"">
+	  		<div class="contaier-fluid">
+	  			<div class="row text-center">
+	  				<div class="col-sm-12">
+	  					 <h2>Мы организуем и проводим</h2>
+			  			<p><img src="img/kvesti-about.png"></p>
+			  			<p>(их также называют квесты ориентирования) разной направленности</p>
+	  				</div>
+	  			</div>
+	  		</div>
+	  		<div class="container">
+	  		<div class="row">
+	  			<div class="col-sm-12 col-md-6">
 	  			<p>Самые популярные-</p>
 	  			<p><strong>Квесты выходного дня</strong></p>
 	  			<strong>Квесты на дни рождения</strong>
@@ -104,7 +112,9 @@
 	  			<p>(связанные как с определенными праздниками, так и с впечатлениями</p>
 	  			<br><br>
 	  		</div>
-    		<div class="row align-items-center">
+	  		</div>
+	  		<div class="row">
+	  			<div class="row align-items-center">
 		        <div class="col-sm-12">
 		            <div class="row justify-content-center">
 		                <div class="col-8 text-center"> 
@@ -113,28 +123,25 @@
 		            </div>
 		        </div>
     		</div>
-		</div>
-	  	</div>
-	  </div>
+	  		</div>
+	  		</div>
 	  </section>
 
-	  <div class="img-kvest">
-	  <div class="container-fluid">
-	   <div class="row align-items-center">
-	   		<div class="row">
+	  <section class="img-kvest">
+	  		<div class="container-fluid">
+	  		<div class="row align-items-center">
 		        <div class="col-sm-12">
 		            <div class="row justify-content-center">
-		                <div class="col-4 text-center"> 
+		                <div class="col-sm-12 col-md-4 text-center"> 
 			  				<span><img src="img/nashi-kvesti.png"></span>
 		                </div>
 		            </div>
 		        </div>
-		    </div>
-    	</div>
-       </div>
-       </div>
+	  		</div>
+	  		</div>
+	  </section>
 
-	   <section class="our-kvest wow fadeInUp" data-wow-offset="200" data-wow-delay="0.5s" data-wow-duration="2s"">
+	  <section class="our-kvest wow fadeInUp" data-wow-offset="200" data-wow-delay="0.5s" data-wow-duration="2s"">
 		   <div class="container">
 		   	  <div class="row">
 		   	  	<div class="col-sm-12 col-md-6 col-lg-4">
@@ -163,10 +170,89 @@
 		   	  	</div>
 		   	  </div>
 		   </div>
-	   </section>
+	  </section>
 
+	  <section class="img-kvest">
+	  		<div class="container-fluid">
+	  		<div class="row align-items-center">
+		        <div class="col-sm-12">
+		            <div class="row justify-content-center">
+		                <div class="col-sm-12 col-md-4 text-center"> 
+			  				<span><img src="img/what.png"></span>
+		                </div>
+		            </div>
+		        </div>
+	  		</div>
+	  		</div>
+	  </section>
 
- 		<script src="js/wow.min.js"></script>
+	  <section class="what">
+	  		<div class="container">
+	  		<div class="row align-items-center">
+	  			<div class="col-sm-12 col-md-4 what-treugolnik text-left">
+	  				<img src="img/treugolnik.png" alt="">
+	  			</div>
+	  			<div class="col-sm-12 col-md-4 text-center">
+	  				<img src="img/what-we.png" alt="">
+	  			</div>
+	  			<div class="col-sm-12 col-md-4 text-right">
+	  				<img src="img/book.png" alt="">
+	  			</div>
+	  		</div>
+	  		<div class="row">
+	  			<div class="col-sm-12 col-md-4 what-sunduk">
+	  				<img src="img/sunduk.png" alt="">
+	  			</div>
+	  			<div class="col-sm-12 col-md-4 text-center">
+	  				<br>
+	  				<p>Разнообразные квесты</p>
+	  				<p>Индивидуальный подход</p>
+	  				<p>Разумные цены</p>
+	  				<p>Постоянные акции</p>
+	  				<p>Профессиональная команда</p>
+	  				<p>Удобный график работы</p>
+	  			</div>
+	  			<div class="col-sm-12 col-md-4"></div>
+	  		</div>
+	  		</div>
+	  </section>
+
+	  <section class="img-kvest">
+	  		<div class="container-fluid">
+	  		<div class="row align-items-center">
+		        <div class="col-sm-12">
+		            <div class="row justify-content-center">
+		                <div class="col-sm-12 col-md-4 text-center"> 
+			  				<span><img src="img/contact.png"></span>
+		                </div>
+		            </div>
+		        </div>
+	  		</div>
+	  		</div>
+	  </section>
+
+	  <section class="contacts">
+	  	 <div class="container">
+	  		<div class="row">
+	  			<div class="col-12 col-md-2 col-lg-1">
+	  				<img src="img/map.png" alt="Наш адрес">
+	  			</div>
+	  			<div class="col-12 col-md-4 col-lg-5 contacts-map">
+	  				<span>Россия, 191036, Санкт-Петербург <br>
+	  					ул.Воронежская,5, офис 115 <br>
+	  					Бизнес-центр "Призма"</span>
+	  			</div>	  			
+	  			<div class="col-12 col-md-2 col-lg-1 offset-lg-2">
+	  				<img src="img/phone.png" alt="Наш телефон">
+	  			</div>
+	  			<div class="col-12 col-md-4 col-lg-3 contacts-map">
+	  				<p>+7(911) 78222-01</p>
+	  			</div>	
+	  		</div>
+	  	 </div>
+	  </section>
+
+ <script src="js/wow.min.js"></script>
  <script>
     new WOW().init();
   </script>
